--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "symfony/console": "^5.2",
         "php-etl/pipeline-contracts": "^0.3.0",
         "php-etl/console-state": "^0.1.0"
@@ -33,5 +33,8 @@
         "branch-alias": {
             "dev-main": "0.1.x-dev"
         }
+    },
+    "require-dev": {
+        "rector/rector": "^0.15.21"
     }
 }
