--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "require": {
         "php": "^8.2",
         "symfony/console": "^5.2",
-        "php-etl/pipeline-contracts": "^0.3.0",
-        "php-etl/console-state": "^0.1.0"
+        "php-etl/console-state": "^0.1.0",
+        "php-etl/action-contracts": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
